[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/toolbox/panels/stall_creator.gd" type="Script" id=1]

[node name="StallCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 125 )
color = Color( 0.384314, 0.678431, 0.372549, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="VBoxContainer" parent="CenterContainer"]
margin_left = 560.0
margin_top = 306.0
margin_right = 720.0
margin_bottom = 414.0
rect_min_size = Vector2( 160, 0 )

[node name="Label_SelectStallType" type="Label" parent="CenterContainer/Container"]
margin_right = 160.0
margin_bottom = 14.0
text = "Select Stall Type"
align = 1

[node name="OptionButton" type="OptionButton" parent="CenterContainer/Container"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 38.0

[node name="Label_EnterStallName" type="Label" parent="CenterContainer/Container"]
margin_top = 42.0
margin_right = 160.0
margin_bottom = 56.0
text = "Stall Name"
align = 1

[node name="LineEdit_StallName" type="LineEdit" parent="CenterContainer/Container"]
margin_top = 60.0
margin_right = 160.0
margin_bottom = 84.0
rect_min_size = Vector2( 130, 0 )
align = 1
max_length = 20
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
placeholder_text = "Enter a name"

[node name="HBoxContainer_UserChoice" type="HBoxContainer" parent="CenterContainer/Container"]
margin_top = 88.0
margin_right = 160.0
margin_bottom = 108.0
alignment = 2

[node name="ButtonAccept" type="Button" parent="CenterContainer/Container/HBoxContainer_UserChoice"]
margin_left = 113.0
margin_right = 160.0
margin_bottom = 20.0
text = "Open"

[connection signal="item_selected" from="CenterContainer/Container/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="CenterContainer/Container/HBoxContainer_UserChoice/ButtonAccept" to="." method="_on_ButtonAccept_pressed"]
